syntax = "proto3";

import 'google/protobuf/timestamp.proto';

message SearchMessage {
    int64 person_id = 1;
    google.protobuf.Timestamp start_date = 2;
    google.protobuf.Timestamp end_date = 3;
    float meters = 4;
}

message Person {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    string company_name = 4;
}

message Location {
    int64 id = 1;
    int64 person_id = 2;
    string longitude = 3;
    string latitude = 4;
    google.protobuf.Timestamp creation_time = 5;
    string wkt_shape = 6;
}

message ConnectionMessage {
    Location location = 1;
    Person person = 2;
}

message ConnectionMessageList {
    repeated ConnectionMessage connections = 1;
}

service ConnectionDataService {
    rpc FindContacts(SearchMessage) returns (ConnectionMessageList);
}